--- a/serverless.yml
+++ b/serverless.yml
@@ -29,10 +29,72 @@ provider:
     thundra_apikey: <YOUR-THUNDRA-API-KEY-HERE>
 
 functions:
-  helloService:
-    handler: io.thundra.demo.localstack.handler.HelloHandler
+  http_handleRequest:
+    handler: io.thundra.demo.localstack.handler.App
     runtime: java8
     events:
       - http:
-          path: /hello
+          path: /requests
+          method: post
+      - http:
+          path: /requests
           method: get
+  sqs_handleItem:
+    handler: io.thundra.demo.localstack.handler.Worker
+    runtime: java8
+    events:
+      - sqs:
+          arn:
+            Fn::GetAtt: [requestQueue, Arn]
+  backend_processRequest:
+    handler: io.thundra.demo.localstack.handler.Processing
+    runtime: java8
+  backend_archiveResult:
+    handler: io.thundra.demo.localstack.handler.Archive
+    runtime: java8
+
+resources:
+  Resources:
+    appDatabase:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: appRequests
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+          - AttributeName: requestID
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+          - AttributeName: requestID
+            KeyType: RANGE
+    archiveBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: archivebucket
+    requestQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: requestQueue
+    processingStateMachine:
+      Type: AWS::StepFunctions::StateMachine
+      Properties:
+        StateMachineName: processingStateMachine
+        RoleArn: testrole
+        DefinitionString: |
+          {
+            "StartAt": "ProcessRequest",
+            "States": {
+              "ProcessRequest": {
+                "Type": "Task",
+                "Resource": "arn:aws:lambda:${self:provider.region}:${self:custom.accountID}:function:${self:service}-${self:provider.stage}-backend_processRequest",
+                "Next": "ArchiveResult"
+              },
+              "ArchiveResult": {
+                "Type": "Task",
+                "Resource": "arn:aws:lambda:${self:provider.region}:${self:custom.accountID}:function:${self:service}-${self:provider.stage}-backend_archiveResult",
+                "End": true
+              }
+            }
+          }
