--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d %t %p [%c{4}] %m%n
 
-log4j.appender.thundra=io.thundra.agent.log.integrations.log4j1.ThundraAppender
-log4j.appender.thundra.layout=org.apache.log4j.PatternLayout
-log4j.appender.thundra.layout.ConversionPattern=%d %t %p [%c{4}] %m%n
-log4j.logger.io.thundra.demo.localstack=TRACE, thundra
+#log4j.appender.thundra=io.thundra.agent.log.integrations.log4j1.ThundraAppender
+#log4j.appender.thundra.layout=org.apache.log4j.PatternLayout
+#log4j.appender.thundra.layout.ConversionPattern=%d %t %p [%c{4}] %m%n
+#log4j.logger.io.thundra.demo.localstack=TRACE, thundra
