--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,9 @@
         <java.version>1.8</java.version>
 
         <maven.shade.plugin.version>2.3</maven.shade.plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 
-        <thundra.agent.version>2.7.12</thundra.agent.version>
+<!--        <thundra.agent.version>2.7.12</thundra.agent.version>-->
 
         <aws.sdk.version>1.11.330</aws.sdk.version>
         <aws.lambda.core.version>1.2.0</aws.lambda.core.version>
@@ -198,6 +199,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        -javaagent:/Users/tolgatakir/development/thundra/thundra-agent-java/thundra-agent-bootstrap/target/thundra-agent-bootstrap.jar
+                        -Dthundra.apiKey=7d13fbdc-f91d-4371-b974-afca1c9e2fb1
+                        -Dthundra.agent.test.project.id=fff2936b-430a-4599-a2ec-ba7cddbfb137
+                        -Dthundra.agent.debug.enable=true
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
