--- a/pom.xml
+++ b/pom.xml
@@ -21,38 +21,45 @@
         <maven.shade.plugin.version>2.3</maven.shade.plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 
-<!--        <thundra.agent.version>2.7.12</thundra.agent.version>-->
-
         <aws.sdk.version>1.11.330</aws.sdk.version>
         <aws.lambda.core.version>1.2.0</aws.lambda.core.version>
         <aws.lambda.events.version>2.2.7</aws.lambda.events.version>
+        <aws-lambda-java-log4j.version>1.0.0</aws-lambda-java-log4j.version>
+        <aws-lambda-java-events.version>3.9.0</aws-lambda-java-events.version>
+
         <jedis.version>2.9.0</jedis.version>
         <httplclient.vesion>4.5.6</httplclient.vesion>
         <httpcore.vesion>4.4.10</httpcore.vesion>
         <json.version>20160810</json.version>
         <log4j.version>1.2.17</log4j.version>
+
+        <assertj-core.version>3.20.2</assertj-core.version>
+        <junit5.version>5.7.2</junit5.version>
+        <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
+        <jackson.version>2.9.8</jackson.version>
+        <jackson-databind.version>2.9.10.3</jackson-databind.version>
     </properties>
 
     <dependencies>
-
-        <!-- Thundra dependencies                       -->
-        <!-- ========================================== -->
-<!--        <dependency>-->
-<!--            <groupId>io.thundra.agent</groupId>-->
-<!--            <artifactId>thundra-agent-lambda-all</artifactId>-->
-<!--            <type>pom</type>-->
-<!--            <version>${thundra.agent.version}</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>io.thundra.agent</groupId>-->
-<!--            <artifactId>thundra-agent-trace-instrument-metadatagen</artifactId>-->
-<!--            <version>${thundra.agent.version}</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
         <!-- ========================================== -->
 
         <!-- AWS dependencies                           -->
         <!-- ========================================== -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>${aws.lambda.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>${aws-lambda-java-events.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-log4j</artifactId>
+            <version>${aws-lambda-java-log4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-lambda</artifactId>
@@ -75,17 +82,7 @@
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-kinesis</artifactId>
-            <version>${aws.sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
-            <version>${aws.sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-stepfunctions</artifactId>
             <version>${aws.sdk.version}</version>
         </dependency>
         <!-- ========================================== -->
@@ -118,59 +115,43 @@
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-events</artifactId>
-            <version>3.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-log4j</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.9.8</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.3</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.9.8</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.7.2</version>
+            <version>${junit-platform-launcher.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.7.2</version>
+            <version>${junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>5.7.2</version>
+            <version>${junit5.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.20.2</version>
+            <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -204,14 +185,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>
-                        -javaagent:/Users/tolgatakir/development/thundra/agent/thundra-agent-bootstrap.jar
-                        -Dthundra.apiKey=7d13fbdc-f91d-4371-b974-afca1c9e2fb1
-                        -Dthundra.agent.test.project.id=fff2936b-430a-4599-a2ec-ba7cddbfb137
-                        -Dthundra.agent.debug.enable=true
-                    </argLine>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <argLine>-->
+<!--                        -javaagent:<YOUR-THUNDRA-AGENT-HERE>-->
+<!--                        -Dthundra.apiKey=<YOUR-THUNDRA-API-KEY-HERE>-->
+<!--                        -Dthundra.agent.test.project.id=<YOUR-THUNDRA-PROJECT-ID-HERE>-->
+<!--                        -Dthundra.agent.debug.enable=true-->
+<!--                    </argLine>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
