--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <json.version>20160810</json.version>
         <log4j.version>1.2.17</log4j.version>
 
+        <thundra.agent.version>2.7.27</thundra.agent.version>
         <assertj-core.version>3.20.2</assertj-core.version>
         <junit5.version>5.7.2</junit5.version>
         <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
@@ -153,6 +154,19 @@
             <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.thundra.agent</groupId>
+            <artifactId>thundra-agent-lambda-localstack</artifactId>
+            <version>${thundra.agent.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.thundra.agent</groupId>
+            <artifactId>thundra-agent-bootstrap</artifactId>
+            <version>${thundra.agent.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!-- ========================================== -->
 
     </dependencies>
@@ -183,16 +197,21 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
-<!--                <configuration>-->
-<!--                    <argLine>-->
-<!--                        -javaagent:<YOUR-THUNDRA-AGENT-HERE>-->
-<!--                        -Dthundra.apiKey=<YOUR-THUNDRA-API-KEY-HERE>-->
-<!--                        -Dthundra.agent.test.project.id=<YOUR-THUNDRA-PROJECT-ID-HERE>-->
-<!--                        -Dthundra.agent.debug.enable=true-->
-<!--                    </argLine>-->
-<!--                </configuration>-->
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/io/thundra/agent/thundra-agent-bootstrap/${thundra.agent.version}/thundra-agent-bootstrap-${thundra.agent.version}.jar
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>thundra-releases</id>
+            <name>Thundra Releases</name>
+            <url>https://repo.thundra.io/content/repositories/thundra-releases</url>
+        </repository>
+    </repositories>
 
 </project>
