--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <groupId>io.thundra</groupId>
     <artifactId>thundra-demo-localstack</artifactId>
     <name>thundra-demo-localstack</name>
-    <version>2.0.0</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
-    
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -19,39 +19,47 @@
         <java.version>1.8</java.version>
 
         <maven.shade.plugin.version>2.3</maven.shade.plugin.version>
-
-        <thundra.agent.version>2.7.12</thundra.agent.version>
+        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
 
         <aws.sdk.version>1.11.330</aws.sdk.version>
         <aws.lambda.core.version>1.2.0</aws.lambda.core.version>
         <aws.lambda.events.version>2.2.7</aws.lambda.events.version>
+        <aws-lambda-java-log4j.version>1.0.0</aws-lambda-java-log4j.version>
+        <aws-lambda-java-events.version>3.9.0</aws-lambda-java-events.version>
+
         <jedis.version>2.9.0</jedis.version>
         <httplclient.vesion>4.5.6</httplclient.vesion>
         <httpcore.vesion>4.4.10</httpcore.vesion>
         <json.version>20160810</json.version>
         <log4j.version>1.2.17</log4j.version>
+
+        <thundra.agent.version>2.7.27</thundra.agent.version>
+        <assertj-core.version>3.20.2</assertj-core.version>
+        <junit5.version>5.7.2</junit5.version>
+        <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
+        <jackson.version>2.9.8</jackson.version>
+        <jackson-databind.version>2.9.10.3</jackson-databind.version>
     </properties>
 
     <dependencies>
 
-        <!-- Thundra dependencies                       -->
-        <!-- ========================================== -->
-        <dependency>
-            <groupId>io.thundra.agent</groupId>
-            <artifactId>thundra-agent-lambda-all</artifactId>
-            <type>pom</type>
-            <version>${thundra.agent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.thundra.agent</groupId>
-            <artifactId>thundra-agent-trace-instrument-metadatagen</artifactId>
-            <version>${thundra.agent.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- ========================================== -->
-
         <!-- AWS dependencies                           -->
         <!-- ========================================== -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>${aws.lambda.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-events</artifactId>
+            <version>${aws-lambda-java-events.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-log4j</artifactId>
+            <version>${aws-lambda-java-log4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-lambda</artifactId>
@@ -70,11 +78,6 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
-            <version>${aws.sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-kinesis</artifactId>
             <version>${aws.sdk.version}</version>
         </dependency>
         <dependency>
@@ -111,6 +114,59 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <version>${junit-platform-launcher.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit5.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.thundra.agent</groupId>
+            <artifactId>thundra-agent-lambda-localstack</artifactId>
+            <version>${thundra.agent.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.thundra.agent</groupId>
+            <artifactId>thundra-agent-bootstrap</artifactId>
+            <version>${thundra.agent.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!-- ========================================== -->
 
     </dependencies>
@@ -137,6 +193,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/io/thundra/agent/thundra-agent-bootstrap/${thundra.agent.version}/thundra-agent-bootstrap-${thundra.agent.version}.jar
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -145,11 +211,6 @@
             <id>thundra-releases</id>
             <name>Thundra Releases</name>
             <url>https://repo.thundra.io/content/repositories/thundra-releases</url>
-        </repository>
-        <repository>
-            <id>thundra-snapshots</id>
-            <name>Thundra Snapshots</name>
-            <url>https://repo.thundra.io/content/repositories/thundra-snapshots</url>
         </repository>
     </repositories>
 
