Excluded internal dependencies of "thundra-agent-bootstrap"

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <artifactId>thundra-agent-bootstrap</artifactId>
             <version>${thundra.agent.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- ========================================== -->
 
