Change dependency scope

--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
             <groupId>io.thundra.agent</groupId>
             <artifactId>thundra-agent-trace</artifactId>
             <version>${thundra.agent.version}</version>
-            <scope>provided</scope>
+            <scope>test</scope>
         </dependency>
         <!-- ========================================== -->
 
