--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,15 @@
         <json.version>20160810</json.version>
         <log4j.version>1.2.17</log4j.version>
 
-        <thundra.agent.version>2.7.36</thundra.agent.version>
+        <thundra.agent.version>2.7.40</thundra.agent.version>
         <assertj-core.version>3.20.2</assertj-core.version>
         <junit5.version>5.7.2</junit5.version>
         <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
         <jackson.version>2.9.8</jackson.version>
         <jackson-databind.version>2.9.10.3</jackson-databind.version>
+        <selenium.version>3.141.59</selenium.version>
+        <testcontainers.version>1.16.0</testcontainers.version>
+        <mockserver.version>3.10.8</mockserver.version>
     </properties>
 
     <dependencies>
@@ -155,6 +158,37 @@
         </dependency>
 
         <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>${selenium.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>selenium</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>${mockserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>${mockserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.thundra.agent</groupId>
             <artifactId>thundra-agent-lambda-localstack</artifactId>
             <version>${thundra.agent.version}</version>
@@ -197,6 +231,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <argLine>
                         -javaagent:${settings.localRepository}/io/thundra/agent/thundra-agent-bootstrap/${thundra.agent.version}/thundra-agent-bootstrap-${thundra.agent.version}.jar
                     </argLine>
