--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <selenium.version>3.141.59</selenium.version>
         <testcontainers.version>1.16.0</testcontainers.version>
         <mockserver.version>3.10.8</mockserver.version>
+        <browserstack.local.version>1.0.3</browserstack.local.version>
     </properties>
 
     <dependencies>
@@ -173,6 +174,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>selenium</artifactId>
             <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.browserstack</groupId>
+            <artifactId>browserstack-local-java</artifactId>
+            <version>${browserstack.local.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
